--- a/index.html
+++ b/index.html
@@ -316,86 +316,49 @@
     <div class="services">
       <p class="services__title">Условия предоставления<br>услуг</p>
       <div class="services__container">
-        <div class="services__row">
-          <div class="services__column">
-            <div class="services__item">
-              <div class="services__item-row">
-                <div class="services__img"><img src="/assets/images/services/иконка.png" alt=tick></div>
-                <div class="services__item-body">
-                  <div class="services__item-text">
-                    При прокате или аренде строго соблюдать правила техники
-                    безопасности
-                    и
-                    все
-                    требования инструктора!</div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="services__column">
-            <div class="services__item">
-              <div class="services__item-row">
-                <div class="services__img"><img src="/assets/images/services/иконка.png" alt=tick></div>
-                <div class="services__item-body">
-                  <div class="services__item-text">
-                    К управлению <b>НЕ ДОПУСКАЮТСЯ</b> лица младше 16 лет и лица в алкогольном
-                    опьянении!</div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="services__column">
-            <div class="services__item">
-              <div class="services__item-row">
-                <div class="services__img"><img src="/assets/images/services/иконка.png" alt=tick></div>
-                <div class="services__item-body">
-                  <div class="services__item-text">
-                    Распивать спиртные напитки во время проката, аренды <b>ЗАПРЕЩЕНО!</b> (После? На
-                    ваше
-                    усмотрение)</div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="services__column">
-            <div class="services__item">
-              <div class="services__item-row">
-                <div class="services__img"><img src="/assets/images/services/иконка.png" alt=tick></div>
-                <div class="services__item-body">
-                  <div class="services__item-text">
-                    Управление осуществляйте в меру своих сил и возможностей. Не переоценивайте себя!
-                    Это опасно!!!</div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="services__column">
-            <div class="services__item">
-              <div class="services__item-row">
-                <div class="services__img"><img src="/assets/images/services/иконка.png" alt=tick></div>
-                <div class="services__item-body">
-                  <div class="services__item-text">
-                    Перед каждым катанием опытный инструктор научит Вас основам управления и будет
-                    сопровождать на протяжении всего маршрута.</div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="services__column">
-            <div class="services__item">
-              <div class="services__item-row">
-                <div class="services__img"><img src="/assets/images/services/иконка.png" alt=tick></div>
-                <div class="services__item-body">
-                  <div class="services__item-text">
-                    При прокате или аренде строго соблюдать правила техники безопасности и все
-                    требования инструктора!</div>
-                </div>
-              </div>
-            </div>
-          </div>
+        <div class="services__card">
+          <div class="services__img"><img src="/assets/images/services/иконка.svg" alt=tick></div>
+          <div class="services__text">
+            При прокате или аренде строго соблюдать правила техники
+            безопасности
+            и
+            все
+            требования инструктора!</div>
+        </div>
+        <div class="services__card">
+          <div class="services__img"><img src="/assets/images/services/иконка.svg" alt=tick></div>
+          <div class="services__text">
+            К управлению <b>НЕ ДОПУСКАЮТСЯ</b> лица младше 16 лет и лица в алкогольном
+            опьянении!</div>
+        </div>
+        <div class="services__card">
+          <div class="services__img"><img src="/assets/images/services/иконка.svg" alt=tick></div>
+          <div class="services__text">
+            Распивать спиртные напитки во время проката, аренды <b>ЗАПРЕЩЕНО!</b> (После? На
+            ваше
+            усмотрение)</div>
+        </div>
+        <div class="services__card">
+          <div class="services__img"><img src="/assets/images/services/иконка.svg" alt=tick></div>
+          <div class="services__text">
+            Управление осуществляйте в меру своих сил и возможностей. Не переоценивайте себя!
+            Это опасно!!!</div>
+        </div>
+        <div class="services__card">
+          <div class="services__img"><img src="/assets/images/services/иконка.svg" alt=tick></div>
+          <div class="services__text">
+            Перед каждым катанием опытный инструктор научит Вас основам управления и будет
+            сопровождать на протяжении всего маршрута.</div>
+        </div>
+        <div class="services__card">
+          <div class="services__img"><img src="/assets/images/services/иконка.svg" alt=tick></div>
+          <div class="services__text">
+            При прокате или аренде строго соблюдать правила техники безопасности и все
+            требования инструктора!</div>
         </div>
       </div>
     </div>
+
     <!----sale------->
 
     <div class="sale">
